--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -252,7 +252,8 @@
 }
 
 .card .card-title {
-  font-size: 1.5rem;
+  font-size: 2rem;
+  text-transform: uppercase;
   color: #333;
   margin-bottom: 10px;
 }
@@ -260,6 +261,7 @@
 .card .card-description {
   color: #666;
   margin-bottom: 15px;
+  text-transform: lowercase;
 }
 
 .card .card-price {
@@ -267,6 +269,8 @@
   font-weight: bold;
   font-size: 1.5rem;
   margin-bottom: 15px;
+  font-size: 18px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .card .card-button {
@@ -570,4 +574,19 @@
   100% {
       transform: translateY(0);
   }
+}
+
+#textCarrito {
+  margin-left: 5px;
+  margin-right: 5px;
+  text-transform: uppercase;
+  font-size: 18px;
+}
+
+#priceCarrito {
+  font-weight: bold;
+  font-size: 18px;
+  float: right;
+  margin-top: 15px;
+  margin-left: 10px;
 }
