--- a/assets/styles/admin-medicamentos/styles.css
+++ b/assets/styles/admin-medicamentos/styles.css
@@ -4,6 +4,7 @@
     width: 90%;
     margin: 0 auto;
     text-align: center;
+    margin-top: 10px;
 }
 
 #medicamentos-table th, #medicamentos-table td {
@@ -20,3 +21,23 @@
     max-width: 70px;
     max-height: 70px;
 }
+
+
+#body-medicamentos {
+    margin: 0;
+    height: 150vh;
+    display: flex;
+    flex-direction: column;
+  }
+#main-medicamentos {
+    display: flex;
+    height: 100%;
+  }
+.left-pane {
+    flex: 0.7;
+    background-color: #f2f2f2;
+  }
+.right-pane {
+    flex: 0.3;
+    background-color: #e6e6e6;
+  }
