--- a/assets/styles/admin-medicamentos/styles.css
+++ b/assets/styles/admin-medicamentos/styles.css
@@ -22,6 +22,11 @@
     max-height: 70px;
 }
 
+#medicamentos-table td {
+  line-height: 60px;
+  font-size: 18px;
+}
+
 
 #body-medicamentos {
     margin: 0;
