--- a/assets/styles/admin-productos/styles.css
+++ b/assets/styles/admin-productos/styles.css
@@ -22,6 +22,10 @@
     max-height: 70px;
 }
 
+#product-table td {
+  line-height: 60px;
+  font-size: 18px;
+}
 
 #body-productos {
     margin: 0;
